# imaging-systems-project

./: .gitignore  capsnet_main.py  experiment_runner.py  main.ipynb  main.py  predictions.csv  predictor.py  pyproject.toml  requirements.txt  resnet_main.py  simplecnn_main.py  trainer.py  xray_data_processor.py
checkpoints/SimpleCNN/: best_model.pth
config/: __init__.py  experiment_configs.py  predictor_settings.py  processor_settings.py  trainer_settings.py
experiments/session_20250728_132455/aug_0/tb/: events.out.tfevents.1753698616.KH-3XXK2T2.6856.0
experiments/session_20250728_133556/: model_mapping.json  results_20250728_133556.csv  summary_20250728_133556.html
experiments/session_20250728_133556/aug_0/ckpt/SimpleCNN/: best_model_fold1.pth  (+4 more)
experiments/session_20250728_133556/aug_0/tb/: events.out.tfevents.1753698961.Danmi.23072.0
experiments/session_20250728_133556/aug_1/tb/: events.out.tfevents.1753700409.Danmi.23072.1
experiments/session_20250728_133556/aug_2/tb/: events.out.tfevents.1753702070.Danmi.23072.2
experiments/session_20250728_133556/aug_3/tb/: events.out.tfevents.1753703283.Danmi.23072.3
experiments/session_20250728_133556/aug_4/tb/: events.out.tfevents.1753704731.Danmi.23072.4
experiments/session_20250728_223711/aug_0/tb/: events.out.tfevents.1753731435.Danmi.22992.0
logs/: events.out.tfevents.1753647141.Danmi.11356.0  events.out.tfevents.1753647268.Danmi.28560.0
models/: __init__.py  capsnet.py  resnet18.py  simple_cnn.py
predictions/: predictions.csv  predictions_ResNet18.csv
trained_models/: best_model_SimpleCNN.pth
(+20 files in other folders)
