[project]
name = "imaging-systems-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy~=2.3",
    "opencv-python==4.10.0.84",
    "pillow~=11.3",
    "pydantic-settings~=2.10",
    "scikit-learn>=1.7.1",
    "tensorboard>=2.20.0",
    "torch~=2.6",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
