[project]
name = "imaging-systems-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib~=3.10",
    "numpy~=2.3",
    "opencv-python==4.10.0.84",
    "pandas~=2.3",
    "pillow~=11.3",
    "pydantic-settings~=2.10",
    "scikit-learn~=1.7",
    "tensorboard~=2.20",
    "torch~=2.7",
    "torchvision~=0.22.1",
    "tqdm~=4.67",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]

[tool.black]
line-length = 120
